--- a/index.html
+++ b/index.html
@@ -122,12 +122,12 @@
           </a href>
           <div class="cymaticaboutcontainer">
             <p class="cymaticabout">2022</p>
-</div>
-</div>
+          </div>
+        </div>
 
 
 
-<hr>
+        <hr>
         <div class="groundedcontainer">
           <p class="groundedinfo"> Motion piece creating & animating characters based on foley sounds. </p>
           <a class="grounded" href="Grounded.html">
@@ -226,7 +226,7 @@
 
 
         <div class="deepincontainer">
-          <p class="deepininfo"> Motion piece created to be exhibited at Conqueer's debut exhibition.  </p>
+          <p class="deepininfo"> Motion piece created to be exhibited at Conqueer's debut exhibition. </p>
           <a class="deepin" href="deepin.html">
             <li class="lideepin"><img class="imgdeepin" src="imageshome/deep.png">Deep Inside</li>
           </a href>
@@ -293,7 +293,7 @@
         <div class="outcontainer">
           <p class="outinfo"> Interview with Joe Blandamer and Christopher Childs, professional stop <br> motion designers.
 
- </p>
+          </p>
           <a class="out" href="outhere.html">
             <li class="liout"><img class="imgout" src="imageshome/imgout.png">Out There</li>
           </a href>
@@ -330,11 +330,13 @@
         </div>
 
 
-  <hr>
+        <hr>
 
-  <a href="index.html"><li class="top"> Back to top ↑ </li> </a>
-</div>
-</div>
+        <a href="index.html">
+          <li class="top"> Back to top ↑ </li>
+        </a>
+    </div>
+  </div>
   </ul>
   </div>
   </div>
