--- a/Conqueer.html
+++ b/Conqueer.html
@@ -117,7 +117,7 @@
       <img class="poster1" src="MEDIACONQ/CONQUEER.png" alt="">
     </div>
     <div class="slide">
-      <video class="movingsword" src="MEDIACONQ/SWORDVID.MP4" loop autoplay muted poster="posterimage.jpg"></video>
+      <video class="movingsword" src="MEDIACONQ/SWORDVID.mp4" loop autoplay muted poster="posterimage.jpg"></video>
     </div>
     <div class="slide">
       <img class="poster1" src="MEDIACONQ/SWORDFINAL3.png" alt="">
