--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <div class="conqcontainer">
           <p class="conqinfo"> Ongoing motion/graphic design work for Conqueer Bristol. </p>
           <a class="conq" href="Conqueer.html">
-            <li class="liconq"> <img class="imgconq" src="imageshome/CONQUEER A3.png">Conqueer</li>
+            <li class="liconq"> <img class="imgconq" src="https://kailanwalsh.github.io/imageshome/CONQUEER A3.png">Conqueer</li>
           </a href>
 
           <div class="conqaboutcontainer">
