--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://kailanwalsh.github.io/styles/index.css">
+  <link rel="stylesheet" href="styles/index.css">
   <title>Kailan Walsh</title>
 
 </head>
@@ -104,7 +104,7 @@
         <div class="conqcontainer">
           <p class="conqinfo"> Ongoing motion/graphic design work for Conqueer Bristol. </p>
           <a class="conq" href="Conqueer.html">
-            <li class="liconq"> <img class="imgconq" src="https://kailanwalsh.github.io/imageshome/CONQUEER A3.png">Conqueer</li>
+            <li class="liconq"> <img class="imgconq" src="imageshome/CONQUEER A3.png">Conqueer</li>
           </a href>
 
           <div class="conqaboutcontainer">
