--- a/Conqueer.html
+++ b/Conqueer.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Kailan Walsh</title>
-  <link rel="stylesheet" href="STYLES/stylesconq.css">
+  <link rel="stylesheet" href="styles/stylesconq.css">
 </head>
 
 <body>
