--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <div class="conqcontainer">
           <p class="conqinfo"> Ongoing motion/graphic design work for Conqueer Bristol. </p>
           <a class="conq" href="Conqueer.html">
-            <li class="liconq"> <img class="imgconq" src="/imageshome/conqueer.png">Conqueer</li>
+            <li class="liconq"> <img class="imgconq" src="imageshome/conqueer.png">Conqueer</li>
           </a href>
 
           <div class="conqaboutcontainer">
@@ -118,7 +118,7 @@
         <div class="cymaticcontainer">
           <p class="cymaticinfo"> Motion graphic work and prints depicting sound in a visual nature. </p>
           <a class="cymatic" href="Cymatics.html">
-            <li class="licymatic"> <img class="imgcymatic" src="./imageshome/CYMATIC.png">Cymatics</li>
+            <li class="licymatic"> <img class="imgcymatic" src="imageshome/CYMATIC.png">Cymatics</li>
           </a href>
           <div class="cymaticaboutcontainer">
             <p class="cymaticabout">2022</p>
@@ -131,7 +131,7 @@
         <div class="groundedcontainer">
           <p class="groundedinfo"> Motion piece creating & animating characters based on foley sounds. </p>
           <a class="grounded" href="Grounded.html">
-            <li class="ligrounded"><img class="imggrounded" src="./imageshome/GROUNDED.png">Grounded</li>
+            <li class="ligrounded"><img class="imggrounded" src="imageshome/GROUNDED.png">Grounded</li>
           </a href>
           <div class="groundedaboutcontainer">
             <p class="groundedabout">2022</p>
@@ -143,7 +143,7 @@
         <div class="sicontainer">
           <p class="siinfo"> Designed leaflet based on a conversation about the topic of sound. </p>
           <a class="si" href="soundinterview.html">
-            <li class="lisi"><img class="imgsi" src="./imageshome/imgsi.png">Sound Interview</li>
+            <li class="lisi"><img class="imgsi" src="imageshome/imgsi.png">Sound Interview</li>
           </a href>
           <div class="siboutcontainer">
             <p class="sibout">2021</p>
