--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <div class="cymaticcontainer">
           <p class="cymaticinfo"> Motion graphic work and prints depicting sound in a visual nature. </p>
           <a class="cymatic" href="Cymatics.html">
-            <li class="licymatic"> <img class="imgcymatic" src="imageshome/CYMATIC.png">Cymatics</li>
+            <li class="licymatic"> <img class="imgcymatic" src="imageshome/cymatic.png">Cymatics</li>
           </a href>
           <div class="cymaticaboutcontainer">
             <p class="cymaticabout">2022</p>
@@ -131,7 +131,7 @@
         <div class="groundedcontainer">
           <p class="groundedinfo"> Motion piece creating & animating characters based on foley sounds. </p>
           <a class="grounded" href="Grounded.html">
-            <li class="ligrounded"><img class="imggrounded" src="imageshome/GROUNDED.png">Grounded</li>
+            <li class="ligrounded"><img class="imggrounded" src="imageshome/grounded.png">Grounded</li>
           </a href>
           <div class="groundedaboutcontainer">
             <p class="groundedabout">2022</p>
