--- a/AT.html
+++ b/AT.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Kailan Walsh</title>
-    <link rel="stylesheet" href="STYLES/at.css">
+    <link rel="stylesheet" href="styles/at.css">
   </head>
   <body>
 
