--- a/Cymatics.html
+++ b/Cymatics.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Kailan Walsh</title>
-    <link rel="stylesheet" href="STYLES/cymatics.css">
+    <link rel="stylesheet" href="styles/cymatics.css">
   </head>
   <body>
 
