--- a/Grounded.html
+++ b/Grounded.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Kailan Walsh</title>
-    <link rel="stylesheet" href="STYLES/grounded.css">
+    <link rel="stylesheet" href="styles/grounded.css">
   </head>
   <body>
 
