--- a/metoo.html
+++ b/metoo.html
@@ -116,25 +116,25 @@
 
   <div id="carousel">
     <div class="slide">
-      <video autoplay muted loop class="first" src="MEDIAmetoo/INSTA 1.mp4" alt="Alone Cover"></video>
+      <video autoplay muted loop class="first" src="MEDIAMETOO/INSTA 1.mp4" alt="Alone Cover"></video>
     </div>
     <div class="slide">
-      <video autoplay muted loop class="first" src="MEDIAmetoo/INSTA 2.mp4" alt="Alone Cover"></video>
+      <video autoplay muted loop class="first" src="MEDIAMETOO/INSTA 2.mp4" alt="Alone Cover"></video>
     </div>
     <div class="slide">
-      <video autoplay muted loop class="first" src="MEDIAmetoo/4.mp4" alt="Alone Cover"></video>
+      <video autoplay muted loop class="first" src="MEDIAMETOO/4.mp4" alt="Alone Cover"></video>
     </div>
     <div class="slide">
-      <video autoplay muted loop class="first" src="MEDIAmetoo/INSTA 6.mp4" alt="Alone Cover"></video>
+      <video autoplay muted loop class="first" src="MEDIAMETOO/INSTA 6.mp4" alt="Alone Cover"></video>
     </div>
     <div class="slide">
-      <video autoplay muted loop class="first" src="MEDIAmetoo/7.mp4" alt="Alone Cover"></video>
+      <video autoplay muted loop class="first" src="MEDIAMETOO/7.mp4" alt="Alone Cover"></video>
     </div>
     <div class="slide">
-      <video autoplay muted loop class="first" src="MEDIAmetoo/INSTA 8.mp4" alt="Alone Cover"></video>
+      <video autoplay muted loop class="first" src="MEDIAMETOO/INSTA 8.mp4" alt="Alone Cover"></video>
     </div>
     <div class="slide">
-      <video autoplay muted loop class="first" src="MEDIAmetoo/INSTA 10.mp4" alt="Alone Cover"></video>
+      <video autoplay muted loop class="first" src="MEDIAMETOO/INSTA 10.mp4" alt="Alone Cover"></video>
     </div>
   </div>
 
