--- a/smooth.html
+++ b/smooth.html
@@ -11,7 +11,7 @@
 
 
   <a href="index.html">
-    <div class="home">
+    <div class="Back">
       <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 30 30" style="enable-background:new 0 0 30 30;" xml:space="preserve">
         <g id="_x30_L68m2_00000164499635051474936740000009133739728931679625_">
           <g>
