--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 
         <div class="cutitcontainer">
           <p class="cutitinfo"> Animated Penguin book covers. </p>
-          <a class="cutit" href="cutitout.html">
+          <a class="cutit" href="Cutitout.html">
             <li class="licutit"><img class="imgcutit" src="imageshome/cutit.png">Cut It Out</li>
           </a href>
           <div class="cutitboutcontainer">
