--- a/alone.html
+++ b/alone.html
@@ -82,7 +82,7 @@
   <div class="carouselcon">
   <div id="carousel">
     <div class="slide">
-      <img class="cover" src="MEDIALONE/Cover.png" alt="Alone Cover">
+      <img class="cover" src="MEDIALONE/COVER.png" alt="Alone Cover">
     </div>
     <div class="slide">
       <img class="cover" src="MEDIALONE/1.png" alt="Alone Cover">
