--- a/wig.html
+++ b/wig.html
@@ -84,7 +84,7 @@
       <img class="cover" src="MEDIAWIG/download.png" alt="Alone Cover">
     </div>
     <div class="slide">
-      <img class="cover" src="MEDIAWIG/Cover.png" alt="Alone Cover">
+      <img class="cover" src="MEDIAWIG/COVER.png" alt="Alone Cover">
     </div>
     <div class="slide">
       <img class="cover" src="MEDIAWIG/1.png" alt="Alone Cover">
