--- a/index.html
+++ b/index.html
@@ -5,19 +5,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="styles/index.css">
   <title>Kailan Walsh</title>
-  <link rel="icon" type="image/x-icon" href="SVG/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="SVG/fav.svg">
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 
 <body>
 
 
 
-  <div class="sticky">Kailan Walsh <a href="CV/CV.pdf" target="_blank" download>
+  <div class="sticky"> <div class="name">Kailan Walsh</div>
+  <div class="iconcon"> <a href="https://www.linkedin.com/in/kailan-walsh-a920621a6/" class="fa fa-linkedin"></a> <a href="https://www.instagram.com/kailanfx/" class="fa fa-instagram"></a></div>
+    <a href="CV/CV.pdf" target="_blank" download="" style="
+  /* display: flex; */
+    /* width: 300px; */
+    justify-content: flex-end;
+    flex-direction: row;
+    align-content: flex-end;
+    /* position: fixed; */
+    flex-wrap: nowrap;">
       <div class="cv"> <svg>
-          <?xml version="1.0" encoding="utf-8"?>
-          <!-- Generator: Adobe Illustrator 26.0.2, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+          <!--?xml version="1.0" encoding="utf-8"?-->
+
           <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 30 30" style="enable-background:new 0 0 30 30;" xml:space="preserve">
             <style type="text/css">
               .st0 {
@@ -30,35 +40,36 @@
                 stroke-miterlimit: 10;
               }
             </style>
+
             <g>
               <g>
                 <path class="st0" d="M24.5,26.3c-6.2,0-12.4,0-18.6,0c0-8.3,0-16.6,0-24.9c0.1,0,0.2,0,0.3,0c4,0,8.1,0,12.1,0
-        			c0.2,0,0.3,0.1,0.4,0.2c1.9,2,3.8,3.9,5.7,5.9c0.1,0.1,0.1,0.2,0.1,0.3c0,6.1,0,12.2,0,18.3C24.5,26.2,24.5,26.2,24.5,26.3z" />
-                <path class="st0" d="M9.5,20.5c0-0.3,0-0.5,0-0.8c3.9,0,7.7,0,11.6,0c0,0.3,0,0.5,0,0.8C17.3,20.5,13.4,20.5,9.5,20.5z" />
+        			c0.2,0,0.3,0.1,0.4,0.2c1.9,2,3.8,3.9,5.7,5.9c0.1,0.1,0.1,0.2,0.1,0.3c0,6.1,0,12.2,0,18.3C24.5,26.2,24.5,26.2,24.5,26.3z"></path>
+                <path class="st0" d="M9.5,20.5c0-0.3,0-0.5,0-0.8c3.9,0,7.7,0,11.6,0c0,0.3,0,0.5,0,0.8C17.3,20.5,13.4,20.5,9.5,20.5z"></path>
                 <path class="st0" d="M21.2,13c-3.9,0-7.7,0-11.6,0c0-0.3,0-0.5,0-0.8c0.1,0,0.2,0,0.3,0c3.7,0,7.4,0,11.1,0c0.2,0,0.3,0,0.3,0.3
-        			C21.2,12.7,21.2,12.9,21.2,13z" />
+        			C21.2,12.7,21.2,12.9,21.2,13z"></path>
                 <path class="st0" d="M21.2,14.7c0,0.2,0,0.5,0,0.7c0,0-0.1,0.1-0.1,0.1c-0.1,0-0.1,0-0.2,0c-3.7,0-7.3,0-11,0c-0.1,0-0.2,0-0.3,0
-        			c0-0.3,0-0.6,0-0.8C13.4,14.7,17.3,14.7,21.2,14.7z" />
-                <path class="st0" d="M21.2,18c-3.9,0-7.7,0-11.6,0c0-0.3,0-0.5,0-0.8c3.9,0,7.7,0,11.6,0C21.2,17.5,21.2,17.7,21.2,18z" />
-                <path class="st0" d="M21.2,22.2c0,0.3,0,0.5,0,0.8c-3.9,0-7.7,0-11.6,0c0-0.3,0-0.5,0-0.8C13.4,22.2,17.3,22.2,21.2,22.2z" />
+        			c0-0.3,0-0.6,0-0.8C13.4,14.7,17.3,14.7,21.2,14.7z"></path>
+                <path class="st0" d="M21.2,18c-3.9,0-7.7,0-11.6,0c0-0.3,0-0.5,0-0.8c3.9,0,7.7,0,11.6,0C21.2,17.5,21.2,17.7,21.2,18z"></path>
+                <path class="st0" d="M21.2,22.2c0,0.3,0,0.5,0,0.8c-3.9,0-7.7,0-11.6,0c0-0.3,0-0.5,0-0.8C13.4,22.2,17.3,22.2,21.2,22.2z"></path>
               </g>
               <g>
                 <path d="M24.5,26.3c-6.2,0-12.4,0-18.6,0c0-8.3,0-16.6,0-24.9c0.1,0,0.2,0,0.3,0c4,0,8.1,0,12.1,0c0.2,0,0.3,0.1,0.4,0.2
         			c1.9,2,3.8,3.9,5.7,5.9c0.1,0.1,0.1,0.2,0.1,0.3c0,6.1,0,12.2,0,18.3C24.5,26.2,24.5,26.2,24.5,26.3z M6.7,25.5c5.7,0,11.3,0,17,0
-        			c0-6,0-11.9,0-17.9c-1.8,0-3.6,0-5.4,0c0-1.8,0-3.6,0-5.4c-3.9,0-7.7,0-11.6,0C6.7,10,6.7,17.7,6.7,25.5z" />
-                <path d="M9.5,20.5c0-0.3,0-0.5,0-0.8c3.9,0,7.7,0,11.6,0c0,0.3,0,0.5,0,0.8C17.3,20.5,13.4,20.5,9.5,20.5z" />
+        			c0-6,0-11.9,0-17.9c-1.8,0-3.6,0-5.4,0c0-1.8,0-3.6,0-5.4c-3.9,0-7.7,0-11.6,0C6.7,10,6.7,17.7,6.7,25.5z"></path>
+                <path d="M9.5,20.5c0-0.3,0-0.5,0-0.8c3.9,0,7.7,0,11.6,0c0,0.3,0,0.5,0,0.8C17.3,20.5,13.4,20.5,9.5,20.5z"></path>
                 <path d="M21.2,13c-3.9,0-7.7,0-11.6,0c0-0.3,0-0.5,0-0.8c0.1,0,0.2,0,0.3,0c3.7,0,7.4,0,11.1,0c0.2,0,0.3,0,0.3,0.3
-        			C21.2,12.7,21.2,12.9,21.2,13z" />
+        			C21.2,12.7,21.2,12.9,21.2,13z"></path>
                 <path d="M21.2,14.7c0,0.2,0,0.5,0,0.7c0,0-0.1,0.1-0.1,0.1c-0.1,0-0.1,0-0.2,0c-3.7,0-7.3,0-11,0c-0.1,0-0.2,0-0.3,0
-        			c0-0.3,0-0.6,0-0.8C13.4,14.7,17.3,14.7,21.2,14.7z" />
-                <path d="M21.2,18c-3.9,0-7.7,0-11.6,0c0-0.3,0-0.5,0-0.8c3.9,0,7.7,0,11.6,0C21.2,17.5,21.2,17.7,21.2,18z" />
-                <path d="M21.2,22.2c0,0.3,0,0.5,0,0.8c-3.9,0-7.7,0-11.6,0c0-0.3,0-0.5,0-0.8C13.4,22.2,17.3,22.2,21.2,22.2z" />
+        			c0-0.3,0-0.6,0-0.8C13.4,14.7,17.3,14.7,21.2,14.7z"></path>
+                <path d="M21.2,18c-3.9,0-7.7,0-11.6,0c0-0.3,0-0.5,0-0.8c3.9,0,7.7,0,11.6,0C21.2,17.5,21.2,17.7,21.2,18z"></path>
+                <path d="M21.2,22.2c0,0.3,0,0.5,0,0.8c-3.9,0-7.7,0-11.6,0c0-0.3,0-0.5,0-0.8C13.4,22.2,17.3,22.2,21.2,22.2z"></path>
               </g>
               <g>
                 <path class="st1" d="M12.1,9.1c-0.3,0.1-0.8,0.3-1.5,0.3c-1.6,0-2.7-1-2.7-2.8c0-1.7,1.2-2.9,2.9-2.9c0.7,0,1.1,0.1,1.3,0.2
-        			l-0.2,0.6c-0.3-0.1-0.7-0.2-1.1-0.2c-1.3,0-2.2,0.8-2.2,2.3c0,1.4,0.8,2.2,2.1,2.2c0.4,0,0.9-0.1,1.2-0.2L12.1,9.1z" />
+        			l-0.2,0.6c-0.3-0.1-0.7-0.2-1.1-0.2c-1.3,0-2.2,0.8-2.2,2.3c0,1.4,0.8,2.2,2.1,2.2c0.4,0,0.9-0.1,1.2-0.2L12.1,9.1z"></path>
                 <path class="st1" d="M14.5,9.3l-1.8-5.5h0.8l0.9,2.7c0.2,0.7,0.4,1.4,0.6,2.1h0c0.2-0.6,0.4-1.3,0.6-2.1l0.9-2.7h0.8l-2,5.5H14.5z
-        			" />
+        			"></path>
               </g>
             </g>
             <g>
@@ -75,8 +86,9 @@
             </g>
           </svg>
 
-      </div>
-    </a></div>
+        </svg></div>
+    </a>
+  </div>
 
 
 
@@ -84,10 +96,10 @@
 
 
 
-    <header  class="sub" id="subtitle">
-      <h1> Kailan (/kay-lun\) is a multi-disciplinary
-        digital designer specialising in Graphic Design and Motion Graphics. </h1>
-    </header>
+  <header class="sub" id="subtitle" style="opacity: 1;">
+    <h1> Kailan (/kay-lun\) is a multi-disciplinary
+      digital designer specialising in Graphic Design and Motion Graphics.&nbsp;</h1>
+  </header>
 
 
 
@@ -103,7 +115,7 @@
           <p class="conqinfo"> Ongoing motion/graphic design work for Conqueer Bristol. </p>
           <a class="conq" href="Conqueer.html">
             <li class="liconq"> <img class="imgconq" src="imageshome/conqueer.png">Conqueer</li>
-          </a href>
+          </a>
 
           <div class="conqaboutcontainer">
             <p class="conqabout">2021-2022</p>
@@ -117,7 +129,7 @@
           <p class="cymaticinfo"> Motion graphic work and prints depicting sound in a visual nature. </p>
           <a class="cymatic" href="Cymatics.html">
             <li class="licymatic"> <img class="imgcymatic" src="imageshome/cymatic.png">Cymatics</li>
-          </a href>
+          </a>
           <div class="cymaticaboutcontainer">
             <p class="cymaticabout">2022</p>
           </div>
@@ -127,10 +139,10 @@
 
         <hr>
         <div class="groundedcontainer">
-          <p class="groundedinfo"> Motion piece creating & animating characters based on foley sounds. </p>
+          <p class="groundedinfo"> Motion piece creating &amp; animating characters based on foley sounds. </p>
           <a class="grounded" href="Grounded.html">
             <li class="ligrounded"><img class="imggrounded" src="imageshome/grounded.png">Grounded</li>
-          </a href>
+          </a>
           <div class="groundedaboutcontainer">
             <p class="groundedabout">2022</p>
           </div>
@@ -143,7 +155,7 @@
           <p class="atgthrinfo"> Team project creating animation from a script about the importance <br> of acting together. </p>
           <a class="atgthr" href="AT.html">
             <li class="liatgthr"><img class="imgatgthr" src="imageshome/actog.png">Act Together</li>
-          </a href>
+          </a>
           <div class="atgthrboutcontainer">
             <p class="atgthrbout">2021</p>
           </div>
@@ -156,7 +168,7 @@
           <p class="talltalesinfo"> University task to create a video based on a family story. </p>
           <a class="talltales" href="talltales.html">
             <li class="litalltales"><img class="imgtalltales" src="imageshome/steph.png">Tall Tales</li>
-          </a href>
+          </a>
           <div class="talltalesboutcontainer">
             <p class="talltalesbout">2021</p>
           </div>
@@ -168,7 +180,7 @@
           <p class="metooinfo"> University task creating 10 moving posters in solidarity with the #MeToo <br>movement. </p>
           <a class="metoo" href="metoo.html">
             <li class="limetoo"><img class="imgmetoo" src="imageshome/herbod.png">#MeToo</li>
-          </a href>
+          </a>
           <div class="metooboutcontainer">
             <p class="metoobout">2021</p>
           </div>
@@ -184,7 +196,7 @@
           <p class="emoinfo"> AI generated video, generated using sound. </p>
           <a class="emo" href="EMO.html">
             <li class="liemo"><img class="imgemo" src="imageshome/emoai.png">Emotion.ai</li>
-          </a href>
+          </a>
           <div class="emoboutcontainer">
             <p class="emobout">2021</p>
           </div>
@@ -200,7 +212,7 @@
           <p class="cutitinfo"> Animated Penguin book covers. </p>
           <a class="cutit" href="Cutitout.html">
             <li class="licutit"><img class="imgcutit" src="imageshome/cutit.png">Cut It Out</li>
-          </a href>
+          </a>
           <div class="cutitboutcontainer">
             <p class="cutitbout">2021</p>
           </div>
@@ -216,7 +228,7 @@
           <p class="deepininfo"> Motion piece created to be exhibited at Conqueer's debut exhibition. </p>
           <a class="deepin" href="deepin.html">
             <li class="lideepin"><img class="imgdeepin" src="imageshome/deep.png">Deep Inside</li>
-          </a href>
+          </a>
           <div class="deepinboutcontainer">
             <p class="deepinbout">2021</p>
           </div>
@@ -233,7 +245,7 @@
           <p class="aloneinfo"> Zine created based on the book A Lonely City by Olivia Liang. </p>
           <a class="alone" href="alone.html">
             <li class="lialone"><img class="imgalone" src="imageshome/cover.png">Alone Zine</li>
-          </a href>
+          </a>
           <div class="aloneboutcontainer">
             <p class="alonebout">2020</p>
           </div>
@@ -245,7 +257,7 @@
           <p class="wiginfo"> CD booklet created to highlight the importance of earplugs when <br> clubbing. </p>
           <a class="wig" href="wig.html">
             <li class="liwig"><img class="imgwig" src="imageshome/plug.png">When It's Gone</li>
-          </a href>
+          </a>
           <div class="wigboutcontainer">
             <p class="wigbout">2020</p>
           </div>
@@ -257,7 +269,7 @@
           <p class="omrinfo"> Posters created in response to a radio podcast about the benefits of gaming. </p>
           <a class="omr" href="radio.html">
             <li class="liomr"><img class="imgomr" src="imageshome/6.jpg">On My Radio</li>
-          </a href>
+          </a>
           <div class="omrboutcontainer">
             <p class="omrbout">2020</p>
           </div>
@@ -268,7 +280,7 @@
           <p class="heatinfo"> Zine created based on The Uninhabitable Earth by David Wallace-Wells. </p>
           <a class="heat" href="heat.html">
             <li class="liheat"><img class="imgheat" src="imageshome/imgheat.png">Heat Death</li>
-          </a href>
+          </a>
           <div class="heatboutcontainer">
             <p class="heatbout">2020</p>
 
@@ -283,7 +295,7 @@
           </p>
           <a class="out" href="outhere.html">
             <li class="liout"><img class="imgout" src="imageshome/imgout.png">Out There</li>
-          </a href>
+          </a>
           <div class="outboutcontainer">
             <p class="outbout">2020</p>
 
@@ -299,7 +311,7 @@
           <p class="knowinfo"> Publication based on personal interview with someone from another <br>country or culture. </p>
           <a class="know" href="knowing.html">
             <li class="liknow"><img class="imgknow" src="imageshome/imgknow.png">Knowing Me, Knowing You</li>
-          </a href>
+          </a>
           <div class="knowboutcontainer">
             <p class="knowbout">2020</p>
 
@@ -312,13 +324,17 @@
         <a href="index.html">
           <li class="top"> Back to top ↑ </li>
         </a>
+      </ul>
     </div>
   </div>
-  </ul>
-  </div>
-  </div>
+
+
+
 
   <script language="javascript" src="myScript.js"></script>
+
+
+
 </body>
 
 </html>
