--- a/smooth.html
+++ b/smooth.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8">
   <title>Kailan Walsh</title>
   <link rel="stylesheet" href="styles/smooth.css">
+  <link rel="icon" type="image/x-icon" href="SVG/fav.svg">
+
 </head>
 
 <body>
