--- a/soundinterview.html
+++ b/soundinterview.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>Kailan Walsh</title>
     <link rel="stylesheet" href="styles/grounded.css">
+    <link rel="icon" type="image/x-icon" href="SVG/fav.svg">
+
   </head>
   <body>
 
