--- a/Cutitout.html
+++ b/Cutitout.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Kailan Walsh</title>
-    <link rel="stylesheet" href="styles/grounded.css">
+    <link rel="stylesheet" href="styles/cutit.css">
     <link rel="icon" type="image/x-icon" href="SVG/fav.svg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
