--- a/heat.html
+++ b/heat.html
@@ -14,7 +14,7 @@
 <body>
 
 
-  <div class="sticky"><h1> Heat Death </h1>  <p  class="about"> Ongoing motion/graphic design work for Conqueer Bristol. </p> <a href="CV/CV.pdf" target="_blank" download>
+  <div class="sticky"><h1> Heat Death </h1>  <p  class="about"> Zine created based on The Uninhabitable Earth by David Wallace-Wells. </p> <a href="CV/CV.pdf" target="_blank" download>
     <div class="iconcon"> <a href="https://www.linkedin.com/in/kailan-walsh-a920621a6/" class="fa fa-linkedin"></a> <a href="https://www.instagram.com/kailanfx/" class="fa fa-instagram"></a></div>
 
     <a href="CV/CV.pdf" target="_blank" download="" style="
