--- a/radio.html
+++ b/radio.html
@@ -13,7 +13,7 @@
 
 
 
-  <div class="sticky"><h1> On My Radio </h1>  <p  class="about"> Ongoing motion/graphic design work for Conqueer Bristol. </p> <a href="CV/CV.pdf" target="_blank" download>
+  <div class="sticky"><h1> On My Radio </h1>  <p  class="about"> Posters created in response to a radio podcast about the benefits of gaming. </p> <a href="CV/CV.pdf" target="_blank" download>
     <div class="iconcon"> <a href="https://www.linkedin.com/in/kailan-walsh-a920621a6/" class="fa fa-linkedin"></a> <a href="https://www.instagram.com/kailanfx/" class="fa fa-instagram"></a></div>
 
     <a href="CV/CV.pdf" target="_blank" download="" style="
