--- a/alone.html
+++ b/alone.html
@@ -13,7 +13,7 @@
 
 
 
-  <div class="sticky"><h1>Alone Zine</h1>  <p  class="about"> Ongoing motion/graphic design work for Conqueer Bristol. </p> <a href="CV/CV.pdf" target="_blank" download>
+  <div class="sticky"><h1>Alone Zine</h1>  <p  class="about"> Zine created based on the book A Lonely City by Olivia Liang. </p> <a href="CV/CV.pdf" target="_blank" download>
     <div class="iconcon"> <a href="https://www.linkedin.com/in/kailan-walsh-a920621a6/" class="fa fa-linkedin"></a> <a href="https://www.instagram.com/kailanfx/" class="fa fa-instagram"></a></div>
 
     <a href="CV/CV.pdf" target="_blank" download="" style="
