--- a/wig.html
+++ b/wig.html
@@ -15,7 +15,7 @@
 
 
 
-  <div class="sticky"><h1> When It's Gone </h1>  <p  class="about"> Ongoing motion/graphic design work for Conqueer Bristol. </p> <a href="CV/CV.pdf" target="_blank" download>
+  <div class="sticky"><h1> When It's Gone </h1>  <p  class="about"> CD booklet created to highlight the importance of earplugs whenclubbing. </p> <a href="CV/CV.pdf" target="_blank" download>
     <div class="iconcon"> <a href="https://www.linkedin.com/in/kailan-walsh-a920621a6/" class="fa fa-linkedin"></a> <a href="https://www.instagram.com/kailanfx/" class="fa fa-instagram"></a></div>
 
     <a href="CV/CV.pdf" target="_blank" download="" style="
