--- a/Conqueer.html
+++ b/Conqueer.html
@@ -4,19 +4,50 @@
 <head>
   <meta charset="utf-8">
   <title>Kailan Walsh</title>
-  <link rel="stylesheet" href="styles/stylesconq.css">
-  <link rel="icon" type="image/x-icon" href="SVG/fav.svg">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <link rel="stylesheet" href="styles/stylesconq.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <link rel="icon" type="image/x-icon" href="SVG/fav.svg">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 
 <body>
 
+  <div class="sticky" style="    display: flex;
+    align-content: center;
+    justify-content: center;
+    align-items: center;">
+    <div id="mySidenav" class="sidenav">
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+      <a href="index.html">Home</a>
+      <a href="#">Cymatics</a>
+      <a href="Grounded.html">Grounded</a>
+      <a href="AT.html">Act Together</a>
+      <a href="talltales.html">Tall Tales</a>
+      <a href="metoo.html">#MeToo</a>
+      <a href="deepin.html">Deep Inside</a>
+      <a href="alone.html">Alone Zine</a>
+      <a href="wig.html">When It's Gone</a>
+      <a href="heat.html">Heat Death</a>
+      <a href="outhere.html">Out There</a>
+      <a href="#knowing.html">Knowing Me, Knowing You</a>
 
+    </div>
 
+    <!-- Use any element to open the sidenav -->
+    <div class="opencon">
+    <span onclick="openNav()"><i class="fa fa-bars" aria-hidden="true"></i><path d="M6 36v-3h36v3Zm0-10.5v-3h36v3ZM6 15v-3h36v3Z"/></svg></div>
+<div id="main" style="width: 100%;">
+      <div class="head">
+      <h1> Conqueer </h1>
+      <div class="aboutcontainer"><p  class="about" style="width:400px;"> Ongoing motion/graphic design work for Conqueer Bristol.</p> </div>
+      <a href="CV/CV.pdf" target="_blank" download> </a>
+      </div>
 
+    </div>
 
-  <div class="sticky"><h1> Conqueer </h1>  <p  class="about"> Ongoing motion/graphic design work for Conqueer Bristol. </p> <a href="CV/CV.pdf" target="_blank" download>
     <div class="iconcon"> <a href="https://www.linkedin.com/in/kailan-walsh-a920621a6/" class="fa fa-linkedin"></a> <a href="https://www.instagram.com/kailanfx/" class="fa fa-instagram"></a></div>
 
     <a href="CV/CV.pdf" target="_blank" download="" style="
@@ -46,32 +77,32 @@
             <g>
               <g>
                 <path class="st0" d="M24.5,26.3c-6.2,0-12.4,0-18.6,0c0-8.3,0-16.6,0-24.9c0.1,0,0.2,0,0.3,0c4,0,8.1,0,12.1,0
-        			c0.2,0,0.3,0.1,0.4,0.2c1.9,2,3.8,3.9,5.7,5.9c0.1,0.1,0.1,0.2,0.1,0.3c0,6.1,0,12.2,0,18.3C24.5,26.2,24.5,26.2,24.5,26.3z"></path>
+              c0.2,0,0.3,0.1,0.4,0.2c1.9,2,3.8,3.9,5.7,5.9c0.1,0.1,0.1,0.2,0.1,0.3c0,6.1,0,12.2,0,18.3C24.5,26.2,24.5,26.2,24.5,26.3z"></path>
                 <path class="st0" d="M9.5,20.5c0-0.3,0-0.5,0-0.8c3.9,0,7.7,0,11.6,0c0,0.3,0,0.5,0,0.8C17.3,20.5,13.4,20.5,9.5,20.5z"></path>
                 <path class="st0" d="M21.2,13c-3.9,0-7.7,0-11.6,0c0-0.3,0-0.5,0-0.8c0.1,0,0.2,0,0.3,0c3.7,0,7.4,0,11.1,0c0.2,0,0.3,0,0.3,0.3
-        			C21.2,12.7,21.2,12.9,21.2,13z"></path>
+              C21.2,12.7,21.2,12.9,21.2,13z"></path>
                 <path class="st0" d="M21.2,14.7c0,0.2,0,0.5,0,0.7c0,0-0.1,0.1-0.1,0.1c-0.1,0-0.1,0-0.2,0c-3.7,0-7.3,0-11,0c-0.1,0-0.2,0-0.3,0
-        			c0-0.3,0-0.6,0-0.8C13.4,14.7,17.3,14.7,21.2,14.7z"></path>
+              c0-0.3,0-0.6,0-0.8C13.4,14.7,17.3,14.7,21.2,14.7z"></path>
                 <path class="st0" d="M21.2,18c-3.9,0-7.7,0-11.6,0c0-0.3,0-0.5,0-0.8c3.9,0,7.7,0,11.6,0C21.2,17.5,21.2,17.7,21.2,18z"></path>
                 <path class="st0" d="M21.2,22.2c0,0.3,0,0.5,0,0.8c-3.9,0-7.7,0-11.6,0c0-0.3,0-0.5,0-0.8C13.4,22.2,17.3,22.2,21.2,22.2z"></path>
               </g>
               <g>
                 <path d="M24.5,26.3c-6.2,0-12.4,0-18.6,0c0-8.3,0-16.6,0-24.9c0.1,0,0.2,0,0.3,0c4,0,8.1,0,12.1,0c0.2,0,0.3,0.1,0.4,0.2
-        			c1.9,2,3.8,3.9,5.7,5.9c0.1,0.1,0.1,0.2,0.1,0.3c0,6.1,0,12.2,0,18.3C24.5,26.2,24.5,26.2,24.5,26.3z M6.7,25.5c5.7,0,11.3,0,17,0
-        			c0-6,0-11.9,0-17.9c-1.8,0-3.6,0-5.4,0c0-1.8,0-3.6,0-5.4c-3.9,0-7.7,0-11.6,0C6.7,10,6.7,17.7,6.7,25.5z"></path>
+              c1.9,2,3.8,3.9,5.7,5.9c0.1,0.1,0.1,0.2,0.1,0.3c0,6.1,0,12.2,0,18.3C24.5,26.2,24.5,26.2,24.5,26.3z M6.7,25.5c5.7,0,11.3,0,17,0
+              c0-6,0-11.9,0-17.9c-1.8,0-3.6,0-5.4,0c0-1.8,0-3.6,0-5.4c-3.9,0-7.7,0-11.6,0C6.7,10,6.7,17.7,6.7,25.5z"></path>
                 <path d="M9.5,20.5c0-0.3,0-0.5,0-0.8c3.9,0,7.7,0,11.6,0c0,0.3,0,0.5,0,0.8C17.3,20.5,13.4,20.5,9.5,20.5z"></path>
                 <path d="M21.2,13c-3.9,0-7.7,0-11.6,0c0-0.3,0-0.5,0-0.8c0.1,0,0.2,0,0.3,0c3.7,0,7.4,0,11.1,0c0.2,0,0.3,0,0.3,0.3
-        			C21.2,12.7,21.2,12.9,21.2,13z"></path>
+              C21.2,12.7,21.2,12.9,21.2,13z"></path>
                 <path d="M21.2,14.7c0,0.2,0,0.5,0,0.7c0,0-0.1,0.1-0.1,0.1c-0.1,0-0.1,0-0.2,0c-3.7,0-7.3,0-11,0c-0.1,0-0.2,0-0.3,0
-        			c0-0.3,0-0.6,0-0.8C13.4,14.7,17.3,14.7,21.2,14.7z"></path>
+              c0-0.3,0-0.6,0-0.8C13.4,14.7,17.3,14.7,21.2,14.7z"></path>
                 <path d="M21.2,18c-3.9,0-7.7,0-11.6,0c0-0.3,0-0.5,0-0.8c3.9,0,7.7,0,11.6,0C21.2,17.5,21.2,17.7,21.2,18z"></path>
                 <path d="M21.2,22.2c0,0.3,0,0.5,0,0.8c-3.9,0-7.7,0-11.6,0c0-0.3,0-0.5,0-0.8C13.4,22.2,17.3,22.2,21.2,22.2z"></path>
               </g>
               <g>
                 <path class="st1" d="M12.1,9.1c-0.3,0.1-0.8,0.3-1.5,0.3c-1.6,0-2.7-1-2.7-2.8c0-1.7,1.2-2.9,2.9-2.9c0.7,0,1.1,0.1,1.3,0.2
-        			l-0.2,0.6c-0.3-0.1-0.7-0.2-1.1-0.2c-1.3,0-2.2,0.8-2.2,2.3c0,1.4,0.8,2.2,2.1,2.2c0.4,0,0.9-0.1,1.2-0.2L12.1,9.1z"></path>
+              l-0.2,0.6c-0.3-0.1-0.7-0.2-1.1-0.2c-1.3,0-2.2,0.8-2.2,2.3c0,1.4,0.8,2.2,2.1,2.2c0.4,0,0.9-0.1,1.2-0.2L12.1,9.1z"></path>
                 <path class="st1" d="M14.5,9.3l-1.8-5.5h0.8l0.9,2.7c0.2,0.7,0.4,1.4,0.6,2.1h0c0.2-0.6,0.4-1.3,0.6-2.1l0.9-2.7h0.8l-2,5.5H14.5z
-        			"></path>
+              "></path>
               </g>
             </g>
             <g>
@@ -93,40 +124,66 @@
   </div>
 
 
-  <div id="carousel">
-    <div class="slide">
-      <img class="poster1" src="MEDIACONQ/CONQUEER.png" alt="">
+    <!-- Add all page content inside this div if you want the side nav to push page content to the right (not used if you only want the sidenav to sit on top of the page -->
+
+
+    <div id="main2">
+
+
+    <!-- Add all page content inside this div if you want the side nav to push page content to the right (not used if you only want the sidenav to sit on top of the page -->
+
+
+
+
+
+
+
+  <div class="row">
+    <div class="column">
+      <img  src="MEDIACONQ/CONQUEER.png" alt="">
+      <img style="width:100%;height:30%;"class="postersword" src="MEDIACONQ/SWORDFINAL3.png" alt="">
+      <img style="width:100%; height:32%;" class="movingqj" src="MEDIACONQ/queerjoyig5.jpg" alt="">
+
     </div>
-    <div class="slide">
+
+    <div class="column">
       <video class="movingsword" src="MEDIACONQ/SWORDVID.mp4" loop autoplay muted poster="posterimage.jpg"></video>
-    </div>
-    <div class="slide">
-      <img class="postersword" src="MEDIACONQ/SWORDFINAL3.png" alt="">
-    </div>
-    <div class="slide">
       <video class="movingthey" src="MEDIACONQ/CONQMOVING.mp4" loop autoplay muted poster="posterimage.jpg"></video>
+      <img style="width:90%" src="MEDIACONQ/sign.jpg" alt=""></img>
+
     </div>
-    <div class="slide">
-      <video class="movingsept" src="MEDIACONQ/SMOKE REVEAL2.mp4" loop autoplay muted poster="posterimage.jpg"></video>
-    </div>
-    <div class="slide">
-      <img class="movingqj" src="MEDIACONQ/queerjoyig5.jpg" alt="">
-    </div>
-    </div>
+
 
   </div>
-  </ul>
 
-  <div class="signdiv">
-    <img class="sign" src="MEDIACONQ/sign.jpg" alt=""></img>
+
   </div>
+</div>
 
-  <hr>
 
-  <div class="bottom">
+<hr>
 
-  <a href="index.html"> <div style="font-family: sans-serif; "class="name">Back</div> </a>
-  <p style="font-family: sans-serif;"> Kailan Walsh </p>
+<div class="bottom">
+
+<a href="index.html"> <div style="font-family: sans-serif; "class="name">Kailan</div> </a>
+<p style="font-family: sans-serif;" class="name"> Walsh </p>
+
+
+<script>
+/* Set the width of the side navigation to 250px and the left margin of the page content to 250px */
+function openNav() {
+  document.getElementById("mySidenav").style.width = "250px";
+  document.getElementById("main").style.marginLeft = "250px";
+  document.getElementById("main2").style.marginLeft = "250px";
+}
+
+/* Set the width of the side navigation to 0 and the left margin of the page content to 0 */
+function closeNav() {
+  document.getElementById("mySidenav").style.width = "0";
+  document.getElementById("main").style.marginLeft = "0";
+  document.getElementById("main2").style.marginLeft = "0";
+}  </script>
+
 </body>
 
 </html>
