--- a/index.html
+++ b/index.html
@@ -125,15 +125,16 @@
 
         <hr>
 
-        <div class="cymaticcontainer">
-          <p class="cymaticinfo"> Motion graphic work and prints depicting sound in a visual nature. </p>
-          <a class="cymatic" href="Cymatics.html">
-            <li class="licymatic"> <img class="imgcymatic" src="imageshome/cymatic.png">Cymatics</li>
+        <div class="wigcontainer">
+          <p class="wiginfo"> CD booklet created to highlight the importance of earplugs when <br> clubbing. </p>
+          <a class="wig" href="wig.html">
+            <li class="liwig"><img class="imgwig" src="imageshome/plug.png">When It's Gone</li>
           </a>
-          <div class="cymaticaboutcontainer">
-            <p class="cymaticabout">2022</p>
+          <div class="wigboutcontainer">
+            <p class="wigbout">2022</p>
           </div>
         </div>
+
 
 
 
@@ -223,13 +224,13 @@
 
         <hr>
 
-        <div class="wigcontainer">
-          <p class="wiginfo"> CD booklet created to highlight the importance of earplugs when <br> clubbing. </p>
-          <a class="wig" href="wig.html">
-            <li class="liwig"><img class="imgwig" src="imageshome/plug.png">When It's Gone</li>
+        <div class="cymaticcontainer">
+          <p class="cymaticinfo"> Motion graphic work and prints depicting sound in a visual nature. </p>
+          <a class="cymatic" href="Cymatics.html">
+            <li class="licymatic"> <img class="imgcymatic" src="imageshome/cymatic.png">Cymatics</li>
           </a>
-          <div class="wigboutcontainer">
-            <p class="wigbout">2020</p>
+          <div class="cymaticaboutcontainer">
+            <p class="cymaticabout">2022</p>
           </div>
         </div>
 
@@ -280,16 +281,46 @@
 
 
         <hr>
-
         <a href="index.html">
-          <li class="top"> Back to top ↑ </li>
+          <li class="top"> Selected Artwork </li>
         </a>
+
       </ul>
     </div>
   </div>
 
+  <div class="row">
+    <div class="column">
+      <img  src="imageshome/misc/chime poster.jpg" alt="Alone Cover">
+      <img  src="imageshome/misc/QUOTE.png" alt="Alone Cover">
+      <img  src="imageshome/misc/MOCKUP.png" alt="Alone Cover">
+      <img  src="imageshome/misc/oversized.png" alt="Alone Cover">
 
 
+    </div>
+    <div class="column">
+      <img  src="imageshome/misc/chiming.png" alt="Alone Cover">
+      <img  src="imageshome/misc/ear.jpeg" alt="Alone Cover">
+      <video width="100%" autoplay muted loop src="imageshome/misc/gif.mp4" alt="Alone Cover"></video>
+      <img  src="imageshome/misc/oversize.png" alt="Alone Cover">
+
+    </div>
+    <div class="column">
+      <img  src="imageshome/misc/ROOM5.png" alt="Alone Cover">
+      <img  src="imageshome/misc/head.png" alt="Alone Cover">
+      <img  src="imageshome/misc/20list.jpg" alt="Alone Cover">
+      <img  src="imageshome/misc/6.jpg" alt="Alone Cover">
+
+</div>
+    </div>
+
+    <hr>
+
+    <div class="bottom">
+
+      <a href="index.html">
+        <p class="top"> Back to top ↑ </p>
+      </a>
 
   <script language="javascript" src="myScript.js"></script>
 
