--- a/knowing.html
+++ b/knowing.html
@@ -20,7 +20,7 @@
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
       <a href="index.html">Home</a>
       <a href="Conqueer.html">Conqueer</a>
-      <a href="#">Cymatics</a>
+      <a href="Cymatics.html">Cymatics</a>
       <a href="Grounded.html">Grounded</a>
       <a href="AT.html">Act Together</a>
       <a href="talltales.html">Tall Tales</a>
@@ -30,7 +30,6 @@
       <a href="wig.html">When It's Gone</a>
       <a href="heat.html">Heat Death</a>
       <a href="outhere.html">Out There</a>
-      <a href="knowing.html">Knowing Me, Knowing You</a>
 
     </div>
 
@@ -157,12 +156,15 @@
 </div>
 <hr>
 
-<div class="bottom">
 
-<a href="index.html"> <div style="font-family: sans-serif; "class="name">Back</div> </a>
-<p style="font-family: sans-serif;" class="name"> Kailan Walsh </p>
-</div>
-</div>
+  <div class="bottom">
+
+    <form>
+     <input type="button" value="Go back!" onclick="history.back()">
+    </form> <p style="font-family: sans-serif;" class="name"> Kailan Walsh </p>
+  </div>
+
+  </div>
 <script>
 /* Set the width of the side navigation to 250px and the left margin of the page content to 250px */
 function openNav() {
