--- a/metoo.html
+++ b/metoo.html
@@ -23,11 +23,11 @@
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
       <a href="index.html">Home</a>
       <a href="Conqueer.html">Conqueer</a>
-      <a href="#">Cymatics</a>
+      <a href="Cymatics.html">Cymatics</a>
       <a href="Grounded.html">Grounded</a>
       <a href="AT.html">Act Together</a>
       <a href="talltales.html">Tall Tales</a>
-      <a href="metoo.html">#MeToo</a>
+      <a href="outhere.html">Out There</a>
       <a href="deepin.html">Deep Inside</a>
       <a href="alone.html">Alone Zine</a>
       <a href="wig.html">When It's Gone</a>
@@ -160,11 +160,12 @@
 
   <div class="bottom">
 
-  <a href="index.html"> <div style="font-family: sans-serif; "class="name">Back</div> </a>
-  <p style="font-family: sans-serif;" class="name"> Kailan Walsh </p>
+    <form>
+     <input type="button" value="Go back!" onclick="history.back()">
+    </form> <p style="font-family: sans-serif;" class="name"> Kailan Walsh </p>
+  </div>
 
-</div>
-</div>
+  </div>
 
 <script>
 /* Set the width of the side navigation to 250px and the left margin of the page content to 250px */
