--- a/talltales.html
+++ b/talltales.html
@@ -21,10 +21,9 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="index.html">Home</a>
         <a href="Conqueer.html">Conqueer</a>
-        <a href="#">Cymatics</a>
+        <a href="Cymatics.html">Cymatics</a>
         <a href="Grounded.html">Grounded</a>
         <a href="AT.html">Act Together</a>
-        <a href="talltales.html">Tall Tales</a>
         <a href="metoo.html">#MeToo</a>
         <a href="deepin.html">Deep Inside</a>
         <a href="alone.html">Alone Zine</a>
@@ -136,12 +135,15 @@
 
 <div style="padding:54.55% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/511296655?h=e550239be7&title=0&byline=0&portrait=0" style="margin-top: 1%;position:absolute;top:0;left:0;width:100%;height:80%;" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>  </body>
 <hr>
-
 <div class="bottom">
 
-<a href="index.html"> <div style="font-family: sans-serif; "class="name">Back</div> </a>
-<p style="font-family: sans-serif;" class="name"> Kailan Walsh </p>
+  <form>
+   <input type="button" value="Go back!" onclick="history.back()">
+  </form> <p style="font-family: sans-serif;" class="name"> Kailan Walsh </p>
 </div>
+
+</div>
+
 </div>
 <script>
 /* Set the width of the side navigation to 250px and the left margin of the page content to 250px */
