--- a/AT.html
+++ b/AT.html
@@ -20,7 +20,7 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="index.html">Home</a>
         <a href="Conqueer.html">Conqueer</a>
-        <a href="#">Cymatics</a>
+        <a href="Cymatics.html">Cymatics</a>
         <a href="Grounded.html">Grounded</a>
         <a href="talltales.html">Tall Tales</a>
         <a href="metoo.html">#MeToo</a>
@@ -141,10 +141,11 @@ of acting together. </p> </div>
 
 <div class="bottom">
 
-<a href="index.html"> <div style="font-family: sans-serif; "class="name">Back</div> </a>
-
-<p style="font-family: sans-serif;" class="name"> Kailan Walsh </p>
+  <form>
+   <input type="button" value="Go back!" onclick="history.back()">
+  </form> <p style="font-family: sans-serif;" class="name"> Kailan Walsh </p>
 </div>
+
 </div>
 <script>
 /* Set the width of the side navigation to 250px and the left margin of the page content to 250px */
