--- a/Conqueer.html
+++ b/Conqueer.html
@@ -22,7 +22,7 @@
     <div id="mySidenav" class="sidenav">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
       <a href="index.html">Home</a>
-      <a href="#">Cymatics</a>
+      <a href="Cymatics.html">Cymatics</a>
       <a href="Grounded.html">Grounded</a>
       <a href="AT.html">Act Together</a>
       <a href="talltales.html">Tall Tales</a>
@@ -165,8 +165,12 @@
 
 <div class="bottom">
 
-<a href="index.html"> <div style="font-family: sans-serif; "class="name">Kailan</div> </a>
-<p style="font-family: sans-serif;" class="name"> Walsh </p>
+  <form>
+   <input type="button" value="Go back!" onclick="history.back()">
+  </form> <p style="font-family: sans-serif;" class="name"> Kailan Walsh </p>
+</div>
+
+</div>
 
 
 <script>
