--- a/Grounded.html
+++ b/Grounded.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Kailan Walsh</title>
-    <link rel="stylesheet" href="styles/stylesconq.css">
+    <link rel="stylesheet" href="styles/grounded.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="icon" type="image/x-icon" href="SVG/fav.svg">
@@ -20,8 +20,7 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="index.html">Home</a>
         <a href="Conqueer.html">Conqueer</a>
-        <a href="#">Cymatics</a>
-        <a href="Grounded.html">Grounded</a>
+        <a href="Cymatics.html">Cymatics</a>
         <a href="AT.html">Act Together</a>
         <a href="talltales.html">Tall Tales</a>
         <a href="metoo.html">#MeToo</a>
@@ -136,14 +135,32 @@
       <div style="padding:56.25% 0 0 0;position:relative;">
         <iframe src="https://player.vimeo.com/video/750409212?h=774a636d93&quality=1080p&loop=1&title=0&byline=0&portrait=0" style="margin-top:1%;position:absolute;top:0;left:0;width:100%;height:80%;" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
 
+
+<h2> Initial Outcomes & Idea Development</h2>
+
+        <div class="row">
+          <div class="column">
+            <img  src="imageshome/misc/gif1.gif" alt="Alone Cover">
+            <img  src="imageshome/misc/snow.png" alt="Alone Cover">
+          </div>
+          <div style="height:100%;"class="column">
+            <img  src="imageshome/misc/skate.gif" alt="Alone Cover">
+
+            <video style="margin-top:3%;width: 100%;" autoplay muted loop controls src="imageshome/misc/traingirl1.mp4" alt="Alone Cover"></video>
+          </div>
+          </div>
+
         <hr>
 
         <div class="bottom">
 
-        <a href="index.html"> <div style="font-family: sans-serif; "class="name">Kailan</div> </a>
-        <p style="font-family: sans-serif;" class="name"> Walsh </p>
-</div>
-</div>
+          <form>
+           <input type="button" value="Go back!" onclick="history.back()">
+          </form> <p style="font-family: sans-serif;" class="name"> Kailan Walsh </p>
+        </div>
+
+        </div>
+
 
 
 
