--- a/deepin.html
+++ b/deepin.html
@@ -23,12 +23,11 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="index.html">Home</a>
         <a href="Conqueer.html">Conqueer</a>
-        <a href="#">Cymatics</a>
+        <a href="cymatics.html">Cymatics</a>
         <a href="Grounded.html">Grounded</a>
         <a href="AT.html">Act Together</a>
         <a href="talltales.html">Tall Tales</a>
         <a href="metoo.html">#MeToo</a>
-        <a href="deepin.html">Deep Inside</a>
         <a href="alone.html">Alone Zine</a>
         <a href="wig.html">When It's Gone</a>
         <a href="heat.html">Heat Death</a>
@@ -133,12 +132,13 @@
 
 <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/668340106?h=4bd40fc3fd&title=0&byline=0&portrait=0" style="margin-top: 1%;position:absolute;top:0;left:0;width:100%;height:80%;" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
 <hr>
-
 <div class="bottom">
 
-<a href="index.html"> <div style="font-family: sans-serif; "class="name">Back</div> </a>
-<p style="font-family: sans-serif;" class="name"> Kailan Walsh </p>
+  <form>
+   <input type="button" value="Go back!" onclick="history.back()">
+  </form> <p style="font-family: sans-serif;" class="name"> Kailan Walsh </p>
 </div>
+
 </div>
 
 <script>
