--- a/heat.html
+++ b/heat.html
@@ -26,7 +26,7 @@
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
       <a href="index.html">Home</a>
       <a href="Conqueer.html">Conqueer</a>
-      <a href="#">Cymatics</a>
+      <a href="Cymatics.html">Cymatics</a>
       <a href="Grounded.html">Grounded</a>
       <a href="AT.html">Act Together</a>
       <a href="talltales.html">Tall Tales</a>
@@ -143,9 +143,6 @@
       <img class="cover" src="MEDIAHEAT/mock2.png" alt="Alone Cover">
     </div>
     <div class="slide">
-      <img class="cover" src="MEDIAHEAT/mock3.png" alt="Alone Cover">
-    </div>
-    <div class="slide">
     <img class="cover" src="MEDIAHEAT/mock4.png" alt="Alone Cover">
   </div>
   <div class="slide">
@@ -158,15 +155,21 @@
     <img class="cover" src="MEDIAHEAT/mock7.png" alt="Alone Cover">
   </div>
 
+  <div class="slide">
+    <img class="cover" src="MEDIAHEAT/mock8.png" alt="Alone Cover">
+  </div>
+
 </div>
 </div>
 <hr>
 
 <div class="bottom">
 
-<a href="index.html"> <div style="font-family: sans-serif; "class="name">Back</div> </a>
-<p style="font-family: sans-serif;" class="name"> Kailan Walsh </p>
+  <form>
+   <input type="button" value="Go back!" onclick="history.back()">
+  </form> <p style="font-family: sans-serif;" class="name"> Kailan Walsh </p>
 </div>
+
 </div>
 <script>
 /* Set the width of the side navigation to 250px and the left margin of the page content to 250px */
