--- a/outhere.html
+++ b/outhere.html
@@ -6,7 +6,7 @@
   <title>Kailan Walsh</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" href="styles/stylesconq.css">
+  <link rel="stylesheet" href="styles/out.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <link rel="icon" type="image/x-icon" href="SVG/fav.svg">
@@ -22,7 +22,7 @@
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
       <a href="index.html">Home</a>
       <a href="Conqueer.html">Conqueer</a>
-      <a href="#">Cymatics</a>
+      <a href="Cymatics.html">Cymatics</a>
       <a href="Grounded.html">Grounded</a>
       <a href="AT.html">Act Together</a>
       <a href="talltales.html">Tall Tales</a>
@@ -31,7 +31,6 @@
       <a href="alone.html">Alone Zine</a>
       <a href="wig.html">When It's Gone</a>
       <a href="heat.html">Heat Death</a>
-      <a href="outhere.html">Out There</a>
       <a href="#knowing.html">Knowing Me, Knowing You</a>
 
     </div>
@@ -41,8 +40,9 @@
     <span onclick="openNav()"><i class="fa fa-bars" aria-hidden="true"></i><path d="M6 36v-3h36v3Zm0-10.5v-3h36v3ZM6 15v-3h36v3Z"/></svg></div>
 <div id="main">
       <div class="head">
-      <h1 style="width: 140px"> Out There </h1>
-      <div class="aboutcontainer"><p  class="about"> CD booklet created to highlight the importance of earplugs when clubbing.</p> </div>
+      <h1 style="width: 145px"> Out There </h1>
+      <div class="aboutcontainer"><p  class="about"> Interview with Joe Blandamer and Christopher Childs, professional stop
+motion designers.</p> </div>
       <a href="CV/CV.pdf" target="_blank" download> </a>
       </div>
 
@@ -169,9 +169,11 @@
 
 <div class="bottom">
 
-<a href="index.html"> <div style="font-family: sans-serif; "class="name">Back</div> </a>
-<p style="font-family: sans-serif;" class="name"> Kailan Walsh </p>
+  <form>
+   <input type="button" value="Go back!" onclick="history.back()">
+  </form> <p style="font-family: sans-serif;" class="name"> Kailan Walsh </p>
 </div>
+
 </div>
 <script>
 /* Set the width of the side navigation to 250px and the left margin of the page content to 250px */
