--- a/wig.html
+++ b/wig.html
@@ -27,14 +27,13 @@
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
       <a href="index.html">Home</a>
       <a href="Conqueer.html">Conqueer</a>
-      <a href="#">Cymatics</a>
+      <a href="Cymatics.html">Cymatics</a>
       <a href="Grounded.html">Grounded</a>
       <a href="AT.html">Act Together</a>
       <a href="talltales.html">Tall Tales</a>
       <a href="metoo.html">#MeToo</a>
       <a href="deepin.html">Deep Inside</a>
       <a href="alone.html">Alone Zine</a>
-      <a href="wig.html">When It's Gone</a>
       <a href="heat.html">Heat Death</a>
       <a href="outhere.html">Out There</a>
       <a href="#knowing.html">Knowing Me, Knowing You</a>
@@ -138,7 +137,7 @@
 
     <div class="row">
       <div class="column">
-        <img  src="MEDIAWIG/cover.png" alt="Alone Cover">
+        <img  src="MEDIAWIG/0.png" alt="Alone Cover">
 <img  src="MEDIAWIG/3.png" alt="Alone Cover">
 <img rotate="90" src="MEDIAWIG/8.png" alt="Alone Cover">
 
@@ -168,8 +167,9 @@
 
 <div class="bottom">
 
-<a href="index.html"> <div style="font-family: sans-serif; "class="name">Back</div> </a>
-<p style="font-family: sans-serif;" class="name"> Kailan Walsh </p>
+  <form>
+   <input type="button" value="Go back!" onclick="history.back()">
+  </form> <p style="font-family: sans-serif;" class="name"> Kailan Walsh </p>
 </div>
 
 </div>
