--- a/index.html
+++ b/index.html
@@ -281,9 +281,7 @@
 
 
         <hr>
-        <a href="index.html">
-          <li class="top"> Selected Artwork </li>
-        </a>
+          <li class="top"> Selected Artwork (2020-2022) </li>
 
       </ul>
     </div>
