--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
 
     </div>
     <div class="column">
-      <img  src="imageshome/misc/chiming.png" alt="Alone Cover">
+        <img  src="imageshome/misc/CHIMING.png" alt="Alone Cover">
       <img  src="imageshome/misc/ear.jpeg" alt="Alone Cover">
       <video width="100%" autoplay muted loop src="imageshome/misc/gif.mp4" alt="Alone Cover"></video>
       <img  src="imageshome/misc/oversize.png" alt="Alone Cover">
