--- a/Conqueer.html
+++ b/Conqueer.html
@@ -39,7 +39,7 @@
     <!-- Use any element to open the sidenav -->
     <div class="opencon">
     <span onclick="openNav()"><i class="fa fa-bars" aria-hidden="true"></i><path d="M6 36v-3h36v3Zm0-10.5v-3h36v3ZM6 15v-3h36v3Z"/></svg></div>
-<div id="main" style="width: 100%;">
+<div id="main">
       <div class="head">
       <h1> Conqueer </h1>
       <div class="aboutcontainer"><p  class="about" style="width:400px;"> Ongoing motion/graphic design work for Conqueer Bristol.</p> </div>
