--- a/index.html
+++ b/index.html
@@ -289,25 +289,39 @@
 
   <div class="row">
     <div class="column">
-      <img  src="imageshome/misc/chime poster.jpg" alt="Alone Cover">
+      <p>  Sound Project - A0 Poster (2022) </p>
+
       <img  src="imageshome/misc/QUOTE.png" alt="Alone Cover">
+      <p>  Sound Project - Conversation Leaflet (2021ß) </p>
+
       <img  src="imageshome/misc/MOCKUP.png" alt="Alone Cover">
+      <p>  Sound Project - Oversized Poster (2021) </p>
+
       <img  src="imageshome/misc/oversized.png" alt="Alone Cover">
 
 
     </div>
     <div class="column">
-        <img  src="imageshome/misc/CHIMING.png" alt="Alone Cover">
+    <p>  Sound Project - Workshop poster (2022) </p>
+      <img  src="imageshome/misc/CHIMING.png" alt="Alone Cover">
+      <p>  Sound Project - Discarded poster outcome (2022) </p>
       <img  src="imageshome/misc/ear.jpeg" alt="Alone Cover">
+      <p>  Sound Project - Sound Visualisation (2021) </p>
       <video width="100%" autoplay muted loop src="imageshome/misc/gif.mp4" alt="Alone Cover"></video>
-      <img  src="imageshome/misc/oversize.png" alt="Alone Cover">
+      <p>  On My Radio (2020) </p>
+
+      <img  src="imageshome/misc/6.jpg" alt="Alone Cover">
 
     </div>
     <div class="column">
+      <p>  Radio show commission (2022) </p>
       <img  src="imageshome/misc/ROOM5.png" alt="Alone Cover">
+      <p>  Sound Project - Headpiece (2021) </p>
+
       <img  src="imageshome/misc/head.png" alt="Alone Cover">
+      <p>  Sound Project - 20 Sound Synonym Poster (2021) </p>
       <img  src="imageshome/misc/20list.jpg" alt="Alone Cover">
-      <img  src="imageshome/misc/6.jpg" alt="Alone Cover">
+
 
 </div>
     </div>
