--- a/index.html
+++ b/index.html
@@ -113,8 +113,6 @@
 
         <div class="conqcontainer">
           <p class="conqinfo"> Ongoing motion/graphic design work for Conqueer Bristol. </p>
-
-          <div> </div>
           <a class="conq" href="Conqueer.html">
             <li class="liconq"> <img class="imgconq" src="imageshome/conqueer.png">Conqueer</li>
           </a>
@@ -180,7 +178,7 @@
         <hr>
 
         <div class="metoocontainer">
-          <p class="metooinfo"> University task creating 10 moving posters in for the #MeToo <br>movement. </p>
+          <p class="metooinfo"> University task creating 10 moving posters in solidarity with the #MeToo <br>movement. </p>
           <a class="metoo" href="metoo.html">
             <li class="limetoo"><img class="imgmetoo" src="imageshome/herbod.png">#MeToo</li>
           </a>
@@ -253,7 +251,7 @@
         <hr>
 
         <div class="outcontainer">
-          <p class="outinfo"> Interview with Joe Blandamer and Christopher Childs, <br> professional stop motion designers.
+          <p class="outinfo"> Interview with Joe Blandamer and Christopher Childs, professional stop <br> motion designers.
 
           </p>
           <a class="out" href="outhere.html">
